--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Snake Game</title>
+
+	<link rel="stylesheet" type="text/css" href="css/snake.css">
 	<script src="libs/p5.js" type="text/javascript"></script>
 	<script src="libs/p5.dom.js" type="text/javascript"></script>
 	<script src="libs/p5.sound.js" type="text/javascript"></script>
@@ -11,6 +13,10 @@
 
 </head>
 <body>
+	<div id="sketch-div"></div>
+	<div id="menu-div">
+		<div id="score-div">Score: <span id="score-span">0</span></div>
+	</div>
 
 </body>
 </html>
