--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
 	<title>Snake Game</title>
 
 	<link rel="stylesheet" type="text/css" href="css/snake.css">
-	<script src="libs/p5.js" type="text/javascript"></script>
-	<script src="libs/p5.dom.js" type="text/javascript"></script>
-	<script src="libs/p5.sound.js" type="text/javascript"></script>
-	<script src="snake.js" type="text/javascript"></script>
-	<script src="sketch.js" type="text/javascript"></script>
-
 </head>
 <body>
 	<div id="sketch-div"></div>
 	<div id="menu-div">
 		<div id="score-div">Score: <span id="score-span">0</span></div>
+
+		<button id="start-game">Start Game</button>
 	</div>
 
+	<script type="text/javascript" src="libs/jquery-3.2.1.min.js"></script>
+
+	<script src="libs/p5.js" type="text/javascript"></script>
+	<script src="libs/p5.dom.js" type="text/javascript"></script>
+	<script src="libs/p5.sound.js" type="text/javascript"></script>
+	<script src="snake.js" type="text/javascript"></script>
+	<script src="sketch.js" type="text/javascript"></script>
 </body>
 </html>
